@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/proguard/Attic/proguard-3.6.ebuild,v 1.1 2006/07/07 09:07:44 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/proguard/Attic/proguard-3.6.ebuild,v 1.2 2006/07/08 12:40:45 nelchael Exp $
 
 inherit java-pkg-2 java-ant-2
 
@@ -8,7 +8,7 @@ DESCRIPTION="Free Java class file shrinker, optimizer, and obfuscator."
 HOMEPAGE="http://proguard.sourceforge.net/"
 SRC_URI="mirror://sourceforge/proguard/${PN}${PV}.tar.gz"
 
-LICENSE="GPL-1"
+LICENSE="GPL-2-with-linking-exception"
 SLOT="0"
 KEYWORDS="~x86"
 IUSE="doc examples"
@@ -38,4 +38,11 @@ src_install() {
 	if use examples; then
 		java-pkg_dohtml -r examples
 	fi
+}
+
+pkg_postinst() {
+
+	einfo "Please see http://proguard.sourceforge.net/GPL_exception.html"
+	einfo "for linking exception information about ${PN}"
+
 }
